[package]
name = "juniper_kv_todos"
version = "0.1.0"
authors = ["danb@structionsite.com"]
edition = "2018"

[dependencies]
rocket = "0.4.3"
juniper_rocket = "0.5.2"
juniper_codegen = "0.14.2"
dotenv = "0.14.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
chrono = { version = "0.4.11", features = ["serde"]}
validator = "0.8.0"
validator_derive = "0.8.0"
kv = { version = "0.20.2", features = ["json-value"]}
uuid = { version = "0.8.1", features = ["v4", "serde"] }

[dependencies.juniper]
version = "0.14.2"
features = ["expose-test-schema", "chrono", "serde_json", "uuid"]

[dependencies.rocket_contrib]
version = "0.4.3"
default-features = false
features = ["json"]
